@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* shakurov: ACL validaton semantics have changed for portal nodes. Update masters via snapshot.
 * shakurov: Commit d674773a35 has changed (and fixed) serialization format of TSchedulerPool{Tree}::SpecifiedAttributes_. Update masters via snapshot.
 * shakurov: Commit c5503dc801 has changed semantics of setting/removing attributes. Update masters via snapshot.
 * savrus: Added some compatibility code for 19.4 clusters. Please use this version or later for updating a 19.4 cluster.
